--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc",
-    "start": "node -r dotenv/config dist/index.js"
+    "start:dev": "node -r dotenv/config dist/index.js",
+    "start": "node dist/index.js"
   }
 }
