--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@discordjs/rest": "^0.4.1",
     "@fastify/cors": "^7.0.0",
     "@fastify/rate-limit": "^6.0.1",
-    "@types/node": "^17.0.33",
     "canvas": "^2.9.1",
-    "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "fast-glob": "^3.2.11",
     "fastify": "^3.29.0",
     "mongodb": "^4.6.0",
-    "nanoid": "^3.3.4",
-    "rimraf": "^3.0.2"
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
+    "@types/node": "^17.0.35",
     "dotenv": "^16.0.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.4"
   },
   "scripts": {
