--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@discordjs/rest": "^0.4.1",
     "@fastify/cors": "^7.0.0",
     "@fastify/rate-limit": "^6.0.1",
+    "axios": "^0.27.2",
     "canvas": "^2.9.1",
     "discord.js": "^13.7.0",
     "fast-glob": "^3.2.11",
